--- a/Makefile.am
+++ b/Makefile.am
@@ -39,21 +39,26 @@ CLEANFILES=
 DISTCLEANFILES=
 BUILT_SOURCES=
 noinst_PROGRAMS=
+EXTRA_DIST =
 
-include src/include.am
-include examples/include.am
-include tests/include.am
+if BUILD_JS
+	include src/js/include.am
+else
+	include src/include.am
+	include examples/include.am
+	include tests/include.am
+endif
 
 if BUILD_PYTHON
-include bindings/python/include.am
+	include bindings/python/include.am
 endif
 
 if BUILD_PHP
-include bindings/php/include.am
+	include bindings/php/include.am
 endif
 
 if BUILD_JAVA
-include bindings/java/include.am
+	include bindings/java/include.am
 endif
 
 SUBDIRS = include
