--- a/examples/include.am
+++ b/examples/include.am
@@ -19,23 +19,23 @@ noinst_HEADERS = examples/megacli.h
 examples_megasimplesync_SOURCES = examples/megasimplesync.cpp
 
 if WIN32
-examples_megacli_CXXFLAGS = -D_WIN32=1 -Iinclude/ -Iinclude/mega/win32 $(FI_CXXFLAGS) $(RL_CXXFLAGS) $(ZLIB_CXXFLAGS) $(LIBCURL_FLAGS) $(CRYPTO_CXXFLAGS) $(DB_CXXFLAGS) $(WINHTTP_CXXFLAGS) $(SODIUM_CXXFLAGS)
-examples_megacli_LDADD = $(FI_LDFLAGS) $(FI_LIBS) $(RL_LDFLAGS) $(RL_LIBS) $(ZLIB_LDFLAGS) $(ZLIB_LIBS) $(CRYPTO_LDFLAGS) $(CRYPTO_LIBS) $(DB_LDFLAGS) $(DB_LIBS) $(WINHTTP_LDFLAGS) $(WINHTTP_LIBS) $(TERMCAP_LDFLAGS) $(TERMCAP_LIBS) $(top_builddir)/src/libmega.la $(LIBS_EXTRA)
+examples_megacli_CXXFLAGS = -D_WIN32=1 -Iinclude/ -Iinclude/mega/win32 $(RL_CXXFLAGS) $(SDK_CXXFLAGS)
+examples_megacli_LDADD =  $(RL_LDFLAGS) $(RL_LIBS)  $(TERMCAP_LDFLAGS) $(TERMCAP_LIBS) $(LIBS_EXTRA) $(SDK_LDFLAGS) $(SDK_LIBS) $(top_builddir)/src/libmega.la
 
-examples_megasimplesync_CXXFLAGS = -D_WIN32=1 -Iinclude/ -Iinclude/mega/win32 $(FI_CXXFLAGS) $(ZLIB_CXXFLAGS) $(CRYPTO_CXXFLAGS) $(DB_CXXFLAGS) $(WINHTTP_CXXFLAGS) $(SODIUM_CXXFLAGS)
-examples_megasimplesync_LDADD = $(FI_LDFLAGS) $(FI_LIBS) $(ZLIB_LDFLAGS) $(ZLIB_LIBS) $(CRYPTO_LDFLAGS) $(CRYPTO_LIBS) $(DB_LDFLAGS) $(DB_LIBS) $(WINHTTP_LDFLAGS) $(WINHTTP_LIBS) $(top_builddir)/src/libmega.la $(LIBS_EXTRA)
+examples_megasimplesync_CXXFLAGS = -D_WIN32=1 -Iinclude/ -Iinclude/mega/win32 $(SDK_CXXFLAGS)
+examples_megasimplesync_LDADD = $(LIBS_EXTRA) $(SDK_LDFLAGS) $(SDK_LIBS) $(top_builddir)/src/libmega.la
 else
 
-examples_megacli_CXXFLAGS = $(FI_CXXFLAGS) $(RL_CXXFLAGS) $(ZLIB_CXXFLAGS) $(CARES_FLAGS) $(LIBCURL_FLAGS) $(CRYPTO_CXXFLAGS) $(DB_CXXFLAGS) $(SODIUM_CXXFLAGS) $(LIBSSL_FLAGS)
-examples_megacli_LDADD = $(FI_LDFLAGS) $(FI_LIBS) $(RL_LDFLAGS) $(RL_LIBS) $(ZLIB_LDFLAGS) $(ZLIB_LIBS) $(CRYPTO_LDFLAGS) $(CRYPTO_LIBS) $(CARES_LDFLAGS) $(CARES_LIBS) $(LIBCURL_LIBS) $(DB_LDFLAGS) $(DB_LIBS) $(LIBSSL_LDFLAGS) $(LIBSSL_LIBS) $(TERMCAP_LDFLAGS) $(TERMCAP_LIBS) $(top_builddir)/src/libmega.la
+examples_megacli_CXXFLAGS =  $(RL_CXXFLAGS) $(SDK_CXXFLAGS)
+examples_megacli_LDADD = $(RL_LDFLAGS) $(RL_LIBS)  $(TERMCAP_LDFLAGS) $(TERMCAP_LIBS) $(LIBS_EXTRA) $(SDK_LDFLAGS) $(SDK_LIBS) $(top_builddir)/src/libmega.la
 
-examples_megasimplesync_CXXFLAGS = $(FI_CXXFLAGS) $(ZLIB_CXXFLAGS) $(CARES_FLAGS) $(LIBCURL_FLAGS) $(CRYPTO_CXXFLAGS) $(DB_CXXFLAGS) $(SODIUM_CXXFLAGS) $(LIBSSL_FLAGS)
-examples_megasimplesync_LDADD = $(FI_LDFLAGS) $(FI_LIBS) $(ZLIB_LDFLAGS) $(ZLIB_LIBS) $(CRYPTO_LDFLAGS) $(CRYPTO_LIBS) $(CARES_LDFLAGS) $(CARES_LIBS) $(LIBCURL_LIBS) $(DB_LDFLAGS) $(DB_LIBS) $(LIBSSL_LDFLAGS) $(LIBSSL_LIBS) $(top_builddir)/src/libmega.la
+examples_megasimplesync_CXXFLAGS = $(SDK_CXXFLAGS)
+examples_megasimplesync_LDADD = $(LIBS_EXTRA) $(SDK_LDFLAGS) $(SDK_LIBS) $(top_builddir)/src/libmega.la
 
 if BUILD_FUSE_EXAMPLE
 examples_linux_megafuse_SOURCES =  examples/linux/megafuse.cpp
-examples_linux_megafuse_CXXFLAGS =  $(FUSE_CXXFLAGS)
-examples_linux_megafuse_LDADD =  $(top_builddir)/src/libmega.la $(FUSE_LDFLAGS) $(FUSE_LIBS)
+examples_linux_megafuse_CXXFLAGS = $(FUSE_CXXFLAGS) $(SDK_CXXFLAGS)
+examples_linux_megafuse_LDADD = $(LIBS_EXTRA) $(SDK_LDFLAGS) $(SDK_LIBS)  $(top_builddir)/src/libmega.la $(FUSE_LDFLAGS) $(FUSE_LIBS)
 endif
 
 endif
