--- a/src/include.am
+++ b/src/include.am
@@ -58,7 +58,7 @@ src_libmega_la_SOURCES += src/mega_utf8proc.cpp
 src_libmega_la_SOURCES += src/gfx/external.cpp
 src_libmega_la_SOURCES += src/pendingcontactrequest.cpp
 
-EXTRA_DIST = src/mega_utf8proc_data.c
+EXTRA_DIST += src/mega_utf8proc_data.c
 
 if BUILD_MEGAAPI
 src_libmega_la_SOURCES += src/megaapi_impl.cpp
